--- a/Css/style.css
+++ b/Css/style.css
@@ -190,6 +190,14 @@ span{
     background: rgb(179, 8, 42);
 }
 /* media querries for the home page */
+@media (min-width: 1280px){
+    #home p{
+        margin-right: 0;
+    }
+    #home #home-btn{
+        margin-right: 0;
+    }
+}
 @media (max-width:1039px){
     nav{
         margin-left: 20px;
@@ -230,7 +238,7 @@ span{
     }
     .actif{
         position: fixed;
-        background: #fff;
+        background: rgb(238, 234, 234);
         display: block;
         width: 100%;
         height: 250px;
