--- a/Css/style.css
+++ b/Css/style.css
@@ -48,7 +48,7 @@ header{
     font-family: 'Merienda';
     color: #fff;
     padding-left: 50px;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
 }
 nav{
@@ -170,15 +170,15 @@ span{
 #home p{
     text-align: center;
     color: rgb(209, 202, 202);
-    font-weight: 300;
-    font-size: 21px;
-    padding: 20px 300px; 
+    font-weight: 100;
+    font-size: 20px;
+    padding: 29px 300px; 
     letter-spacing: 1px;
 }
 #home #home-btn{
     color: #fff;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
     padding: 15px 40px;
     background: crimson;
     border-radius: 60px;
@@ -293,7 +293,6 @@ span{
         font-size: 17px;
         padding: 13px 25px;
         position: absolute;
-        top: 290px;
     }
 }
 @media (max-width:520px){
@@ -309,5 +308,16 @@ span{
 @media (max-width:410px){
     .toggle{
         margin-left: 45.5%;
+    }
+}
+@media (max-width:330px){
+    .toggle{
+        margin-left: 35.5%;
+    }
+    #title{
+        font-size: 23px;
+    }
+    #home p{
+        padding: 35px 8px;
     }
 }
