--- a/Css/style.css
+++ b/Css/style.css
@@ -32,7 +32,7 @@ header{
 /* the sticky header */
 .sticky{
     background: #fff;
-    border-bottom: 2px solid #000;
+    border-bottom: 1px solid #ccc;
 }
 .sticky #logo{
     color: #000;
