--- a/Css/about.css
+++ b/Css/about.css
@@ -59,12 +59,17 @@ html{
     font-weight: 200;
     font-size: 16px;
     letter-spacing: 1px;
+    transition: .3s ease;
+}
+.text p:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .column img{
     max-width: 100%;
     height: 290px;
     margin-top: 80px;
     margin-left: 100px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 /* media queries for handeling the about page responsiveness*/
 @media(min-width:1300px){
@@ -206,6 +211,66 @@ html{
 @media(max-width:400px){
     #discover img{
         width: 93%;
+    }
+}
+/* Footer Section */
+footer{
+    width: 100%;
+    height: 80px;
+    background: #fff;
+    display: flex;
+    -webkit-display:flex;
+    -moz-display:flex;
+    -ms-display:flex;
+    -o-display:flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    border-top: 1px solid #ccc;
+}
+footer h1{
+    font-weight: bold;
+    font-family: 'Merienda';
+    font-size: 30px;
+    color: #000;
+    margin: 0 20px;
+    flex-basis: 20%;
+}
+footer p{
+    text-align: center;
+    flex-basis: 70%;
+    font-size: 17px;
+}
+.sm{
+    position: absolute;
+    right: 40px;
+}
+.sm a{
+    font-size: 27px;
+    margin: 0 10px;
+    transition: .4s ease;
+}
+.sm i{
+    color: black;
+}
+.sm i:hover{
+    color: crimson;
+}
+@media(max-width:750px){
+    .sm{
+        right: 35%;
+        bottom: 0;
+    }
+    .sm a {
+        font-size: 20px;
+    }
+    footer h1{
+        margin: 0 5px;
+        font-size: 25px;
+    }
+    footer p{
+        font-size: 11px;
     }
 }
 
