--- a/Css/style.css
+++ b/Css/style.css
@@ -372,9 +372,9 @@ span{
 }
 .circle{
     width: 18px;
-    height: 18px;
+    height: 5px;
+    border-radius: 2px;
     background: #fff;
-    border-radius: 50%;
     margin-left: 1.6px;
     animation: anime 2s infinite;
     position: relative;
@@ -382,13 +382,14 @@ span{
 }
 @keyframes anime{
     0%{
-        top: 0;
+        top: 2%;
     }
     20%{
-        top: 50%;
+        top: 80%;
     }
     100%{
-        top: 0;
+        top: 2%;
     }
 }
+
 
