--- a/Css/about.css
+++ b/Css/about.css
@@ -132,7 +132,7 @@ html{
 #discover{
     width: 100%;
     background: #C21336;
-    padding-bottom: 50px;
+    padding: 80px 0;
 }
 #discovertitle{
     padding: 20px 0;
@@ -289,6 +289,7 @@ footer p{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 30px 0;
 }
 #counters .container{
     width: 100%;
